feat: auth, facade products
